[ci skip] Pushing CA-tools files
Signed-off-by: bob-fly <sibo_feng@126.com>

--- a/platforms/hyperledger-fabric/charts/anchorpeer/templates/anchorpeer.yaml
+++ b/platforms/hyperledger-fabric/charts/anchorpeer/templates/anchorpeer.yaml
@@ -41,7 +41,7 @@ spec:
       initContainers:
       - name: certificates-init
         image: {{ $.Values.metadata.images.alpineutils }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
           value: {{ $.Values.vault.address }}
@@ -137,7 +137,7 @@ spec:
       containers:
       - name: anchorpeer
         image: {{ $.Values.metadata.images.fabrictools }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         command: ["sh", "-c"]
