--- a/platforms/hyperledger-fabric/charts/fabric_cli/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/fabric_cli/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
       initContainers:
       - name: certificates-init
         image: {{ $.Values.metadata.images.alpineutils }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
           value: {{ $.Values.vault.address }}
@@ -130,7 +130,7 @@ spec:
       containers:
       - name: cli
         image: {{ $.Values.metadata.images.fabrictools }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         command: ["sh", "-c", "/bin/bash"]
