--- a/platforms/hyperledger-fabric/charts/orderernode/templates/deployment.yaml
+++ b/platforms/hyperledger-fabric/charts/orderernode/templates/deployment.yaml
@@ -62,7 +62,7 @@ spec:
       initContainers:
       - name: kafka-healthcheck
         image: {{ $.Values.metadata.images.healthcheck }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         command: ["sh", "-c"]
         args:
         - |-
@@ -114,7 +114,7 @@ spec:
           fi
       - name: certificates-init
         image: {{ $.Values.metadata.images.alpineutils }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
           value: {{ $.Values.vault.address }}
