--- a/platforms/hyperledger-fabric/charts/create_channel/templates/create_channel.yaml
+++ b/platforms/hyperledger-fabric/charts/create_channel/templates/create_channel.yaml
@@ -46,7 +46,7 @@ spec:
       initContainers:
       - name: certificates-init
         image: {{ $.Values.metadata.images.alpineutils }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
           value: {{ $.Values.vault.address }}
@@ -142,7 +142,7 @@ spec:
       containers:
       - name: createchannel
         image: {{ $.Values.metadata.images.fabrictools }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         command: ["sh", "-c"]
