--- a/platforms/hyperledger-fabric/charts/verify_chaincode/templates/verify_chaincode.yaml
+++ b/platforms/hyperledger-fabric/charts/verify_chaincode/templates/verify_chaincode.yaml
@@ -40,7 +40,7 @@ spec:
       initContainers:
       - name: certificates-init
         image: {{ $.Values.metadata.images.alpineutils }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         env:
         - name: VAULT_ADDR
           value: {{ $.Values.vault.address }}
@@ -141,7 +141,7 @@ spec:
       containers:
       - name: verifychaincode
         image: {{ $.Values.metadata.images.fabrictools }}
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         stdin: true
         tty: true
         command: ["sh", "-c"]
