--- a/platforms/hyperledger-fabric/configuration/deploy-network.yaml
+++ b/platforms/hyperledger-fabric/configuration/deploy-network.yaml
@@ -98,9 +98,9 @@
 
     #Creating a pause so that the client certificates are valid
     # You can continue if the CA-server pods are running for more than 5 minutes
-#    - pause:
-#        prompt: "Sleeping... so that the client certificates are valid"
-#        minutes: 6
+    - pause:
+        prompt: "Sleeping... so that the client certificates are valid"
+        minutes: 6
 
     # Create Orderer crypto materials
     - name: Create crypto materials for each orderer
