[ci skip] Pushing deployment files for namespace, service accounts and clusterrolebinding
Signed-off-by: bob-fly <sibo_feng@126.com>

--- a/examples/supplychain-app/configuration/samples/network-fabricv2.yaml
+++ b/examples/supplychain-app/configuration/samples/network-fabricv2.yaml
@@ -158,13 +158,22 @@ network:
           grpc:
             port: 9092
                 
-        orderer:
-          name: orderer
-          type: orderer          
-          consensus: raft
-          grpc:
-            port: 7050       
-        
+#        orderer:
+#          name: orderer
+#          type: orderer
+#          consensus: raft
+#          grpc:
+#            port: 7050
+        orderers:
+          # This sample has multiple orderers as an example.
+          # You can use a single orderer for most production implementations.
+          - orderer:
+            name: orderer
+            type: orderer
+            consensus: raft
+            grpc:
+              port: 7050
+
 
     # Specification for the 2nd organization. Each organization maps to a VPC and a separate k8s cluster
     - organization:
